--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,23 +10,27 @@
 @import url(//careers.jobvite.com/brett/resources/fonts/InputMono/InputMono-Regular.ttf);
 @import url('https://fonts.googleapis.com/css?family=Jura:300,400,500,600,700&display=swap');
 
-$logo-color-primary: #f3744f;
-$logo-color-secondary: #a5c0cd;
-$logo-color-tertiary: #fff200;
-$logo-color-dark: #272727;
-$logo-color-blue: #9db6d8;
-$logo-color-red: #de8e8b;
-$logo-color-gray: #191c20;
+$color-primary: #f3744f;
+$color-secondary: #a5c0cd;
+$color-dark-secondary: darken($color-secondary, 40%);
+$color-tertiary: #fff200;
+$color-gray: #272727;
+$color-blue: #9db6d8;
+$color-red: #de8e8b;
+$gilroy: 'Gilroy-SemiBold';
+$gilroy-light: 'Gilroy-Light';
+$jura: 'Jura';
+$mono: 'InputMono-Regular';
 
 html {-webkit-box-sizing:border-box;box-sizing:border-box}
 *,:after,:before {-webkit-box-sizing:inherit;box-sizing:inherit}
-body {display:-webkit-box;display:-ms-flexbox;display:flex;min-width:0;min-height:0;display:flex;min-width:0;min-height:0;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;background-color:#fff;color:#777;padding:0;margin:0;font-size:1em;line-height:1.375;cursor:default}
+body {display:-webkit-box;display:-ms-flexbox;display:flex;min-width:100%;min-height:100vh;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;background-color:#fff;color:#777;padding:0;margin:0;font-size:1em;line-height:1.375;cursor:default}
 h1 {font-size:3.75em}
 .h2,h2 {line-height:1.5;font-size:2.25em}
 h3 {font-size:1.25em;line-height:1.3}
 h4 {font-size:1.0625em}
 h5 {font-size:1em;text-transform:uppercase}
-p {font-size:1em/1em;margin-bottom:1.25em;line-height:1.375}
+p {font-size:1em;margin-bottom:1.25em;line-height:1.375}
 dl,ol,ul {color:#777}
 ::-moz-selection {background:#3d87cf;color:#fff;text-shadow:none}
 ::selection {background:#3d87cf;color:#fff;text-shadow:none}
@@ -204,51 +208,102 @@ a.disabled {cursor:default;pointer-events:none}
 .svg-icon path {fill:currentColor}
 @media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
 img[src*=".svg"] {width:100%}}
-h1,h2,h3,h4,h5 {color:#3b5b6b}
-// code {font-family:'Input Mono';padding:5px;margin:0;font-size:13px;line-height:2;word-break:break-all;word-wrap:break-word;color:#333;background-color:#f5f5f5;border:1px solid #ccc;border-radius:4px}
-::-moz-selection {background:#3b5b6b}
-::selection {background:#3b5b6b}
-.scroll-data {position:fixed;top:0;right:20px;background:#fff;width:28%;border:2px solid #3b5b6b;border-top:0;color:#3b5b6b;font-size:25px;line-height:1;z-index:1}
-.end-data-ltr,.end-data-rtl,.start-data-ltr,.start-data-rtl {position:absolute;top:0;left:0;border-top:2px solid #3b5b6b;width:100px;text-align:left}
-.logo {background:url(//careers.jobvite.com/brettbyron/images/logo.svg) no-repeat center;background-size:contain;height:100px;width:auto}
-svg.logo-animation {height:50px;position:absolute;top:0;left:0}
-.capital,.lower {fill:none;stroke-width:23;stroke-miterlimit:10;-webkit-transition:stroke-dashoffset 2s ease-in-out;transition:stroke-dashoffset 2s ease-in-out}
-.lower#stem {stroke:rgba(39,39,39,.75);stroke-dashoffset:264;stroke-dasharray:264,264;-webkit-transition:stroke-dashoffset 1s ease-in-out;transition:stroke-dashoffset 1s ease-in-out}
-.lower#bowl {stroke:rgba(243,116,79,.75);stroke-dashoffset:523.9476318359375;stroke-dasharray:523.9476318359375,523.9476318359375;-webkit-transition:stroke-dashoffset 1.5s ease-in-out;transition:stroke-dashoffset 1.5s ease-in-out}
-.capital {stroke:rgba(165,192,205,.75);stroke-dashoffset:570.0023803710938;stroke-dasharray:570.0023803710938,570.0023803710938}
-#scrollAnimationLTR,#scrollAnimationRTL {padding:0 0 50px;min-height:120vh;margin-top:100px}
-#scrollAnimationLTR,#scrollAnimationRTL h1 {margin:0 auto}
-#scrollAnimationLTR .scroll-animation {border:2px solid #3b5b6b;width:100%;overflow-y:scroll}
-#scrollAnimationLTR .scroll-animation .content {position:relative;min-height:300px;height:100%;width:100%}
-#scrollAnimationLTR .scroll-animation .column {-webkit-box-sizing:border-box;box-sizing:border-box;width:35%;height:300px;position:relative}
-#scrollAnimationLTR .scroll-animation .column:first-of-type {z-index:2;width:35%}
-#scrollAnimationLTR .scroll-animation .column:last-of-type {z-index:0;width:65%;border-left:2px dashed #3b5b6b}
-#scrollAnimationLTR .scroll-animation #mask {position:absolute;top:0;bottom:0;left:0;background:#3b5b6b;height:100%;width:100%;z-index:1}
-#scrollAnimationLTR .scroll-animation #mask h2 {position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%,-50%);transform:translate(-50%,-50%);color:#fff;margin:0 auto}
-#scrollAnimationLTR .position-data {position:absolute;top:0;left:0}
-#scrollAnimationLTR .mask-data {width:60%;text-align:right;float:right}
-#scrollAnimationLTR .left-data {position:absolute;left:-100px;bottom:0;width:100px;color:#3b5b6b;text-align:right}
-#scrollAnimationRTL .scroll-animation {border:2px solid #3b5b6b;width:100%;overflow-y:scroll}
-#scrollAnimationRTL .scroll-animation .content {position:relative;min-height:300px;height:100%;width:100%}
-#scrollAnimationRTL .scroll-animation .column {-webkit-box-sizing:border-box;box-sizing:border-box;height:300px;position:relative;width:65%;border-right:2px dashed #3b5b6b;z-index:0}
-#scrollAnimationRTL .scroll-animation .content .column:last-of-type {z-index:2;width:35%;border:0}
-#scrollAnimationRTL .scroll-animation .content .column:first-of-type {z-index:0}
-#scrollAnimationRTL .scroll-animation #mask {position:absolute;top:0;bottom:0;right:0;background:#3b5b6b;height:100%;width:100%;z-index:1}
-#scrollAnimationRTL .scroll-animation #mask h2 {position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%,-50%);transform:translate(-50%,-50%);color:#fff;margin:0 auto}
-#scrollAnimationRTL .position-data {position:absolute;top:0;right:0}
-#scrollAnimationRTL .mask-data {width:60%;text-align:right;float:right}
-#scrollAnimationRTL .right-data {position:absolute;right:-100px;bottom:0;width:100px;color:#3b5b6b;text-align:right}
-
 
 // GitHub Pages overwrite
-h1,h2,h3,h4,h5{font-family:'Gilroy-SemiBold';}
-html,body{font-family:'Jura';font-weight:400;}
-code{font-family:'InputMono-Regular' !important;}
+::selection, ::-moz-selection {background: $color-dark-secondary;}
+h1 {text-decoration:underline;}
+h1,h2,h3,h4,h5{font-family:$gilroy;color:$color-dark-secondary}
+html,body{font-family:$jura;font-weight:400;}
+pre {padding: 5px 10px;margin: 0;background-color: #f5f5f5;border: 1px solid #ccc;border-radius: 4px;}
+:not(pre) > code {padding: 5px 10px;margin: 0;background-color: #f5f5f5;border: 1px solid #ccc;border-radius: 4px;}
+code{font-family:$mono !important;font-size: 13px;line-height:2;word-break: break-all;word-wrap: break-word;color: #333;}
+.wrapper {max-width:900px;margin:0 auto;padding:0 25px;}
 nav ul {list-style-type:none;display:flex;align-items:center;justify-content:space-between;}
-nav ul li a, nav ul li a:visited {font-family:'Gilroy-Light';text-shadow:rgba(255,255,255,0.25);}
-nav ul li a:hover {font-size:120%;}
+nav ul li a, nav ul li a:visited {font-family:$gilroy-light;color:#fff;transition:all 0.5s ease;}
+nav ul li a:hover {color:$color-dark-secondary}
 nav ul li a i {padding-right:5px;}
+ol li {margin-bottom:5px}
 // section.page-header {background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(../images/golden_girls.jpg);background-size:cover;background-repeat:no-repeat;background-position:center 40%;padding:10% 0 15%;width:100%;display:flex;align-items:center;justify-content:center;min-height:400px;position:absolute;z-index:-1;}
 // #jobvite-brand {margin-top:400px}
 section.main-content {max-width:1120px;margin:0 auto;width:100%;}
 h1.project-name {color:#fff;}
+a.site-title {color:#fff;font-size:1.5em;font-family:$gilroy;}
+
+// Created Styles
+// Home page circle items
+.circle-item {position:relative;text-align:center;height:150px;
+    & * {transition:all 0.5s ease;}
+    & .circle {background-color:#159957;background-image:linear-gradient(120deg, #155799, #159957);display:flex;justify-content:center;align-items:center;height:120px;width:120px;border-radius:50%;
+        & i {color:#fff;font-size:3em;}
+    }
+    & p {position:absolute;opacity:0;bottom:-25%;font-family:$gilroy;font-size:1.1em;margin:0;width:100%;}
+    &:hover {
+        & .circle {
+            box-shadow: inset 0 0 10px #000000;
+        }
+        & i {
+            color:$color-dark-secondary;
+        }
+        & p {
+            opacity:1;bottom:0;
+        }
+    }
+}
+// Code Example list
+ul.examples {list-style-type:none;padding:0;
+    & li {position:relative;border:2px solid $color-secondary;margin:20px auto 60px;transition:all 0.5s ease,background-position 0s ease;box-shadow:0px 0px 0px rgba(#000,0);padding-bottom:80%;background-size:100%;background-position:center;background-repeat:no-repeat;
+        &.scroll-example {background-image:url("../images/scrollAnimationScreenshot.jpg");}
+        &.svg-example {background-image:url("../images/svg.jpg");}
+    }
+    & li:hover {box-shadow:2px 2px 8px -2px rgba(0,0,0,0.5);background-size:110%;background-position:center;background-repeat:no-repeat;transform:scale(1.05);
+        & a {background:rgba(#000, 0.75);
+            & p {opacity:1;top:35%}
+        }
+    }
+    & li a {width:100%;height:100%;position:absolute;top:0;left:0;background:rgba(#000,0);transition:all 0.5s ease;
+        & p {opacity:0;color:#fff;font-size:3em;font-family:$gilroy-light;pointer-events:none;width:100%;text-align:center;position:absolute;top:100%;transition:all 0.75s ease;}
+    }
+}
+// Anchor pulse
+.anchor {transition:background-color 0.5s ease;background-color:transparent;margin:0 -1em;padding:1em;}
+.anchor:focus {background-color:rgba($color-secondary, 0.4);}
+// --- Start Scroll animation
+.scroll-data {position:fixed;top:0px;right:20px;background:#fff;width:28%;border:2px solid $color-dark-secondary;border-top:0;color:$color-dark-secondary;font-size:25px;line-height:1;z-index:999;}
+.start-data-ltr, .end-data-ltr, .start-data-rtl, .end-data-rtl {position:absolute;top:0;left:0;border-top:2px solid $color-dark-secondary;width:100px;text-align:left;}
+.logo {background-image:url('//careers.jobvite.com/brettbyron/images/logo.svg');background-repeat:no-repeat;background-position:center;background-size:contain;height:100px;width:auto;}
+.logo-animation {height:50px;position:absolute;top:0;left:0}
+.capital,.lower {fill:none;stroke-width:23;stroke-miterlimit:10;-webkit-transition:stroke-dashoffset 2s ease-in-out;transition:stroke-dashoffset 2s ease-in-out}
+.lower#stem {stroke:rgba(39,39,39,.75);stroke-dashoffset:264;stroke-dasharray:264,264;-webkit-transition:stroke-dashoffset 1s ease-in-out;transition:stroke-dashoffset 1s ease-in-out}
+.lower#bowl {stroke:rgba(243,116,79,.75);stroke-dashoffset:523.9476318359375;stroke-dasharray:523.9476318359375,523.9476318359375;-webkit-transition:stroke-dashoffset 1.5s ease-in-out;transition:stroke-dashoffset 1.5s ease-in-out}
+.capital {stroke:rgba(165,192,205,.75);stroke-dashoffset:570.0023803710938;stroke-dasharray:570.0023803710938,570.0023803710938}
+#scrollAnimationLTR, #scrollAnimationRTL {padding:0 0 50px;min-height:120vh;margin-top:100px;}
+#scrollAnimationRTL {min-height:150vh;}
+#scrollAnimationLTR, #scrollAnimationRTL h1 {margin:0 auto}
+// LTR scroll animation
+#scrollAnimationLTR .scroll-animation {border:2px solid $color-dark-secondary;width:100%;overflow-y:scroll;}
+#scrollAnimationLTR .scroll-animation .content {position:relative;min-height:300px;height:100%;width:100%;}
+#scrollAnimationLTR .scroll-animation .column {box-sizing:border-box;width:35%;height:300px;position:relative;}
+#scrollAnimationLTR .scroll-animation .column:first-of-type {z-index:2;width:35%;}
+#scrollAnimationLTR .scroll-animation .column:last-of-type {z-index:0;width:65%;border-left:2px dashed $color-dark-secondary;}
+#scrollAnimationLTR .scroll-animation #mask {position:absolute;top:0;bottom:0;left:0;background:$color-dark-secondary;height:100%;width:100%;z-index:1;}
+#scrollAnimationLTR .scroll-animation #mask h2 {position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);color:#fff;margin:0 auto;}
+#scrollAnimationLTR .position-data {position:absolute;top:0;left:0;}
+#scrollAnimationLTR .mask-data {width:60%;text-align:right;float:right;}
+#scrollAnimationLTR .left-data {position:absolute;left:-100px;bottom:0;width:100px;color:$color-dark-secondary;text-align:right;}
+// RTL scroll animation
+#scrollAnimationRTL .scroll-animation {border:2px solid $color-dark-secondary;width:100%;overflow-y:scroll;}
+#scrollAnimationRTL .scroll-animation .content {position:relative;min-height:300px;height:100%;width:100%;}
+#scrollAnimationRTL .scroll-animation .column {box-sizing:border-box;height:300px;position:relative;width:65%;border-right:2px dashed $color-dark-secondary;z-index:0;}
+#scrollAnimationRTL .scroll-animation .content .column:last-of-type {z-index:2;width:35%;border:0;}
+#scrollAnimationRTL .scroll-animation .content .column:first-of-type {z-index:0;}
+#scrollAnimationRTL .scroll-animation #mask {position:absolute;top:0;bottom:0;right:0;background:$color-dark-secondary;height:100%;width:100%;z-index:1;}
+#scrollAnimationRTL .scroll-animation #mask h2 {position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);color:#fff;margin:0 auto;}
+#scrollAnimationRTL .position-data {position:absolute;top:0;right:0;}
+#scrollAnimationRTL .mask-data {width:60%;text-align:right;float:right;}
+#scrollAnimationRTL .right-data {position:absolute;right:-100px;bottom:0;width:100px;color:$color-dark-secondary;text-align:right;}
+// --- End Scroll Animation
+// --- Start Interactive SVG
+// map
+#svgMap {min-height:100vh;}
+#map {height:700px;width:100%;}
+// --- End Interactive SVG
