--- a/style/style.css
+++ b/style/style.css
@@ -44,3 +44,7 @@ svg.logo-animation {
   stroke-dasharray: 570.0023803710938,570.0023803710938;
 }
 /*# sourceMappingURL=style.css.map */
+/* // Animoji */
+#animoji {height:300px;width:100%;max-width:300px;position:absolute;top:50%;left:50%;-webkit-transform: translate(-40%, -50%);transform: translate(-40%, -50%);}
+#animoji .animoji-frame {position:absolute;max-width:300px;width:100%;height:300px;opacity:0;transition:all 0.01s linear;background-size:contain;background-repeat:no-repeat;background-position:center;}
+#animoji .animoji-frame:first-of-type {opacity:1;}
