--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,67 @@
+*,
+*:before,
+*:after {
+  -webkit-transition: all 0.75s ease-in-out;
+  transition: all 0.75s ease-in-out;
+}
+
+body {
+  margin: 0;
+}
+
+.hide {
+  opacity: 0;
+}
+
+header {
+  height: 50px;
+  padding: 1.5% 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+nav {
+  margin-left: auto;
+  opacity: 1;
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+nav ul li {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+nav ul li:not(:last-of-type) {
+  margin-right: 2.5em;
+}
+
 .logo {
   background: url(../images/logo.svg) no-repeat center;
   background-size: contain;
@@ -5,18 +69,76 @@
   width: auto;
 }
 
-.logo-animation svg {
-  height: 400px;
+svg.logo-animation {
+  position: absolute;
 }
 
-.lower {
-  fill: #046380;
+svg.logo-animation.animate {
+  height: 300px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-40%, -50%);
+          transform: translate(-40%, -50%);
+}
+
+svg.logo-animation:not(.animate) {
+  height: 50px;
+  top: 2%;
+  left: 10%;
+  -webkit-transform: translate(0);
+          transform: translate(0);
+}
+
+.lower,
+.capital {
+  fill: none;
+  stroke-width: 23;
+  stroke-miterlimit: 10;
+  -webkit-transition: stroke-dashoffset 2s ease-in-out;
+  transition: stroke-dashoffset 2s ease-in-out;
+}
+
+.lower#stem {
+  stroke: rgba(39, 39, 39, 0.75);
+  stroke-dashoffset: 264;
+  stroke-dasharray: 264, 264;
+  -webkit-transition: stroke-dashoffset 1s ease-in-out;
+  transition: stroke-dashoffset 1s ease-in-out;
+}
+
+.lower#bowl {
+  stroke: rgba(243, 116, 79, 0.75);
+  stroke-dashoffset: 523.9476318359375;
+  stroke-dasharray: 523.9476318359375, 523.9476318359375;
+  -webkit-transition: stroke-dashoffset 1.5s ease-in-out;
+  transition: stroke-dashoffset 1.5s ease-in-out;
 }
 
 .capital {
-  fill: none;
-  stroke: #7F7978;
-  stroke-width: 22.7341;
-  stroke-miterlimit: 10;
+  stroke: rgba(165, 192, 205, 0.75);
+  stroke-dashoffset: 570.0023803710938;
+  stroke-dasharray: 570.0023803710938, 570.0023803710938;
+}
+
+#animoji {
+  width: 300px;
+  height: 300px;
+  position: relative;
+}
+
+#animoji .animoji-frame {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  opacity: 0;
+  -webkit-transition: all 0.01s linear;
+  transition: all 0.01s linear;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#animoji .animoji-frame :first-of-type {
+  opacity: 1;
 }
 /*# sourceMappingURL=style.css.map */
