--- a/style/style.scss
+++ b/style/style.scss
@@ -1,4 +1,127 @@
-.logo {background:url(../images/logo.svg) no-repeat center;background-size:contain;height:100px;width:auto;}
-.logo-animation svg {height:400px;}
-.lower {fill: #046380;}
-.capital {fill: none;stroke: #7F7978;stroke-width: 22.7341;stroke-miterlimit: 10;}
+$color-primary: #f3744f;
+$color-secondary: #a5c0cd;
+$color-tertiary: #fff200;
+$color-gray: #272727;
+$color-blue: #9db6d8;
+$color-red: #de8e8b;
+
+*,
+*:before,
+*:after {
+	transition: all 0.75s ease-in-out;
+}
+
+body {
+	margin: 0;
+}
+
+.hide {
+	opacity: 0;
+}
+
+header {
+	height: 50px;
+	padding: 1.5% 10%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+nav {
+	margin-left: auto;
+	opacity: 1;
+
+	ul {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: nowrap;
+		justify-content: flex-end;
+
+		li {
+			text-align: center;
+			display: flex;
+			flex: 1 1 auto;
+
+			&:not(:last-of-type) {
+				margin-right: 2.5em;
+			}
+		}
+	}
+}
+
+.logo {
+	background: url(../images/logo.svg) no-repeat center;
+	background-size: contain;
+	height: 100px;
+	width: auto;
+}
+
+svg.logo-animation {
+	position: absolute;
+
+	&.animate {
+		height: 300px;
+		top: 50%;
+		left: 50%;
+		transform: translate(-40%, -50%);
+	}
+
+	&:not(.animate) {
+		height: 50px;
+		top: 2%;
+		left: 10%;
+		transform: translate(0);
+	}
+}
+
+.lower,
+.capital {
+	fill: none;
+	stroke-width: 23;
+	stroke-miterlimit: 10;
+	transition: stroke-dashoffset 2s ease-in-out;
+}
+
+.lower {
+	&#stem {
+		stroke: rgba($color-gray, 0.75);
+		stroke-dashoffset: 264;
+		stroke-dasharray: 264, 264;
+		transition: stroke-dashoffset 1s ease-in-out;
+	}
+
+	&#bowl {
+		stroke: rgba($color-primary, 0.75);
+		stroke-dashoffset: 523.9476318359375;
+		stroke-dasharray: 523.9476318359375, 523.9476318359375;
+		transition: stroke-dashoffset 1.5s ease-in-out;
+	}
+}
+
+.capital {
+	stroke: rgba(165, 192, 205, 0.75);
+	stroke-dashoffset: 570.0023803710938;
+	stroke-dasharray: 570.0023803710938, 570.0023803710938;
+}
+
+// Animoji
+#animoji {
+	width: 300px;
+	height: 300px;
+	position: relative;
+}
+
+#animoji .animoji-frame {
+	& :first-of-type {
+		opacity: 1;
+	}
+
+	position: absolute;
+	width: 300px;
+	height: 300px;
+	opacity: 0;
+	transition: all 0.01s linear;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+}
